--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,13 @@
 {
   "presets": [
-    "@babel/preset-react",
     ["@babel/preset-env", {
       "targets": {
         "browsers": ["last 2 versions", "IE >= 8"]
       }
-    }]
+    }],
+    "@babel/preset-react"
   ],
   "plugins": [
-    ["@babel/plugin-transform-runtime",{"corejs": 2}],
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     "@babel/plugin-syntax-dynamic-import",
     "universal-import",
@@ -20,7 +19,8 @@
     "@babel/plugin-proposal-numeric-separator",
     "@babel/plugin-proposal-throw-expressions",
     "@babel/plugin-proposal-export-default-from",
-    "@babel/plugin-proposal-object-rest-spread"
+    "@babel/plugin-proposal-object-rest-spread",
+    ["@babel/plugin-transform-runtime",{"corejs": 2}]
   ],
   "env": {
     "development": {
