--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "compression": "^1.7.3",
     "connect-mongo": "^2.0.3",
     "connected-react-router": "^6.3.1",
-    "cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.4",
     "cookie-session": "^2.0.0-beta.3",
     "cookies": "^0.7.3",
     "cookies-js": "^1.2.3",
@@ -51,19 +51,19 @@
     "feathers-authentication-hooks": "^0.3.1",
     "feathers-hooks-common": "^4.20.2",
     "feathers-nedb": "^4.0.1",
-    "final-form": "^4.11.0",
+    "final-form": "^4.12.0",
     "helmet": "^3.15.1",
     "history": "^4.7.2",
     "http-proxy": "^1.17.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
-    "jsonwebtoken": "^8.4.0",
+    "jsonwebtoken": "^8.5.0",
     "jwt-simple": "^0.5.5",
     "locale": "^0.1.0",
     "localforage": "^1.7.3",
     "lodash": "^4.17.11",
-    "lru-memoize": "^1.0.2",
-    "mongoose": "^5.4.14",
+    "lru-memoize": "^1.1.0",
+    "mongoose": "^5.4.17",
     "multireducer": "^3.1.2",
     "nedb": "^1.8.0",
     "nprogress": "^0.2.0",
@@ -76,13 +76,13 @@
     "qs": "^6.6.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-final-form": "^4.0.2",
+    "react-final-form": "^4.1.0",
     "react-helmet": "^5.2.0",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.3.1",
-    "react-select": "^2.4.0",
+    "react-select": "^2.4.1",
     "react-universal-component": "^4.0.0",
     "recompose": "^0.30.0",
     "redial": "^0.5.0",
@@ -91,6 +91,7 @@
     "redux-auth-wrapper": "^2.1.0",
     "redux-persist": "^5.10.0",
     "redux-persist-cookie-storage": "^1.0.0",
+    "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
     "serialize-javascript": "^1.6.1",
     "serve-favicon": "^2.5.0",
@@ -148,7 +149,7 @@
     "eslint-plugin-react": "^7.11.1",
     "eventsource-polyfill": "^0.9.6",
     "expose-loader": "^0.7.5",
-    "extract-css-chunks-webpack-plugin": "^3.3.2",
+    "extract-css-chunks-webpack-plugin": "^3.3.3",
     "file-loader": "^3.0.1",
     "flow-bin": "^0.93.0",
     "flow-typed": "^2.5.1",
@@ -177,7 +178,7 @@
     "prettier-eslint-cli": "^4.7.1",
     "react-a11y": "^1.1.0",
     "react-devtools": "^3.6.0",
-    "react-hot-loader": "^4.7.1",
+    "react-hot-loader": "^4.7.2",
     "redux-devtools": "^3.5.0",
     "redux-devtools-dock-monitor": "^1.1.3",
     "redux-devtools-extension": "^2.13.8",
@@ -191,11 +192,11 @@
     "style-loader": "^0.23.1",
     "svg-react-loader": "^0.4.6",
     "sw-precache-webpack-plugin": "^0.11.5",
-    "terser-webpack-plugin": "^1.2.2",
+    "terser-webpack-plugin": "^1.2.3",
     "typescript": "^3.3.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
-    "webpack-bundle-analyzer": "^3.0.4",
+    "webpack-bundle-analyzer": "^3.1.0",
     "webpack-cli": "^3.2.3",
     "webpack-dev-middleware": "^3.6.0",
     "webpack-hot-middleware": "^2.24.3",
