--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "author": "dev",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development WEBPACK_DLLS=1 PORT=3000 node ./bin/server.js --watch ./server --watch ./build/static/dist/server --no-update-notifier",
+    "dev": "npm-run-all --parallel start:dev",
+    "start:dev": "concurrently \"yarn start:dev:server\" \"yarn start:dev:api\"",
+    "start:dev:server": "NODE_ENV=development WEBPACK_DLLS=1 PORT=3000 node ./bin/server.js --watch ./server --watch ./build/static/dist/server --no-update-notifier",
+    "start:dev:api": "NODE_PATH=api  NODE_ENV=development BABEL_DISABLE_CACHE=1 APIPORT=3030 node ./bin/api.js",
     "prod": "NODE_ENV=production PORT=8080 node --trace-deprecation ./bin/server.js",
     "prod:build:client": "NODE_ENV=production webpack --display-error-details --config ./webpack/prod.client.js",
     "dlls": "webpack --display-error-details --config webpack/dllplugin.vendor.config.js",
