--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start:dev": "concurrently \"yarn start:dev:server\" \"yarn start:dev:api\"",
     "start:dev:server": "NODE_ENV=development WEBPACK_DLLS=1 PORT=3000 node ./bin/server.js --watch ./server --watch ./build/static/dist/server --no-update-notifier",
     "start:dev:api": "NODE_PATH=api  NODE_ENV=development BABEL_DISABLE_CACHE=1 APIPORT=3030 node ./bin/api.js",
-    "prod": "NODE_ENV=production PORT=8080 node --trace-deprecation ./bin/server.js",
+    "prod": "concurrently \"yarn prod:bin:server\" \"yarn prod:bin:api\"",
+    "prod:bin:server": "NODE_ENV=production PORT=8080 node --trace-deprecation ./bin/server.js",
+    "prod:bin:api": "NODE_ENV=production BABEL_DISABLE_CACHE=1 APIPORT=3030 node ./bin/api.js",
     "prod:build:client": "NODE_ENV=production webpack --display-error-details --config ./webpack/prod.client.js",
     "dlls": "webpack --display-error-details --config webpack/dllplugin.vendor.config.js",
     "clean:all": "npm-run-all --parallel clean clean:dlls",
@@ -36,6 +38,7 @@
     "@feathersjs/socketio": "^3.2.9",
     "@feathersjs/socketio-client": "^1.2.1",
     "@fortawesome/fontawesome-free": "^5.7.2",
+    "accepts": "^1.3.5",
     "async": "^2.6.2",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
@@ -165,7 +168,6 @@
     "loader-utils": "^1.2.3",
     "morgan": "^1.9.1",
     "node-sass": "^4.11.0",
-    "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
     "offline-plugin": "^5.0.6",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
